<resources>
    <string name="app_name">Carol Discos</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gender_edit" translatable="false">GenderEditActivity</string>
    <string name="title_activity_album_edit" translatable="false">AlbumEditActivity</string>
    <string name="about">About</string>
    <string name="pink">Background Pink</string>
    <string name="text">This App has been develepod to allow you to group up your  favourite discos!</string>
    <string name="white">Background White</string>
    <string name="utfpr" translatable="false">UTFPR 2018</string>
    <string name="teacher">Teacher: Alexandre Rômulo Feitosa</string>
    <string name="information">Informations</string>
    <string name="student">Student: Carolina Lourenço dos Santos</string>
    <string name="android" translatable="false">Android Oreo (8.1) API 27</string>
</resources>
